# logline

./: CLAUDE.md  Makefile  PLAN_v2.md  Protocol.md  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  docker-build.yml  e2e-tests.yml  python-tests.yml
agent/: Makefile  README.md  pyproject.toml
agent/logline_agent/: asyncio_helpers.py  client.py  configuration.py  coordinator.py  main.py  marker_watcher.py  telemetry.py
agent/src/logline_agent/: __init__.py  __main__.py  configuration.py  framing.py  main.py  session.py  tailer.py
agent/tests/: test_framing.py  test_main.py  test_smoke.py  test_telemetry.py
e2e_tests/: Makefile  pyproject.toml  test_e2e.py
e2e_tests/tests/: conftest.py  test_coordinator.py  test_e2e.py  test_reconnect.py  test_streaming.py  test_tls.py
grafana/: README.md  logline-overview.json
server/: Dockerfile  Makefile  README.md  pyproject.toml
server/logline_server/: __init__.py  configuration.py  main.py  telemetry.py
server/src/logline_server/: __main__.py  auth.py  configuration.py  decompress.py  framing.py  main.py  paths.py  protocol.py  session.py  sink.py  util.py
server/tests/: test_auth.py  test_client_auth.py  test_configuration.py  test_destination_path.py  test_framing.py  test_handle_client.py  test_protocol.py  test_reuse_port_subprocess.py  test_sink.py  test_smoke.py  test_telemetry.py  test_v2_protocol.py
