[project]
name = "logline-agent"
version = "0.0.1"
description = "Logline Agent"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/messa/logline"

[project.scripts]
logline-agent = "logline_agent:agent_main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logline_agent"]
