[project]
name = "logline-e2e-tests"
version = "0.0.1"
description = "Logline end-to-end tests"
requires-python = ">=3.9"
dependencies = [
    "logline-agent",
    "logline-server",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false

[tool.uv.sources]
logline-agent = { path = "../agent", editable = true }
logline-server = { path = "../server", editable = true }

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
