[project]
name = "logline-server"
version = "0.0.1"
description = "Logline Server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
]

[project.urls]
Homepage = "https://github.com/leadhub-code/logline"

[project.scripts]
logline-server = "logline_server:server_main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
